add registration from

--- a/frontend/my project/registration.html
+++ b/frontend/my project/registration.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up Form</title>
     <link href='https://fonts.googleapis.com/css?family=Nunito:400,300' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/registration_form.css">
 </head>
 <body>
 
@@ -27,7 +27,7 @@
       
       <label for="password">Password:</label>
       <input type="password" id="password" name="user_password">
-    </fieldset>
+    <!-- </fieldset> -->
     
       <!-- <label>Interests:</label>
       <input type="checkbox" id="development" value="interest_development" name="user_interest"><label class="light" for="development">Development</label><br>
