all in one html file

--- a/frontend/my project/players_page.html
+++ b/frontend/my project/players_page.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="css/reset.css" />
-        <link rel="stylesheet" href="css/main.css" />
+        <link rel="stylesheet" href="css/main_styles.css" />
         <link rel="stylesheet" href="css/players_page.css" />
         <link rel="stylesheet" href="css/font-awesome.min.css">
         <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
@@ -80,7 +80,7 @@
 
                 <!-- MAIN PART -->
                 
-                <div id="main">
+                <div id="players-rating-main">
                     <h2 class="heading">Best players: </h2>
                     <!-- отступ от заголовка -->
                     <div style="clear: both"><br></div>
