--- a/frontend/my project/index.html
+++ b/frontend/my project/index.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="css/reset.css" />
-        <link rel="stylesheet" href="css/main_styles.css" />
+        <link rel="stylesheet" href="css/basic.css" />
         <link rel="stylesheet" href="css/header_footer.css" />
         <link rel="stylesheet" href="css/main_page.css" />
         <link rel="stylesheet" href="css/form.css" />
