some small changes, i decided not to use handmade tree building, i will use only templates;

--- a/frontend/my project/index_objects.html
+++ b/frontend/my project/index_objects.html
@@ -114,7 +114,7 @@
         <div style="clear: both"><br></div>
 
         <!--REGISTRATION-->
-        <section id="registration" hidden>
+        <section id="registration">
             <form action="index.html" method="post">
 
                 <h2 class="heading">Registration</h2>
@@ -257,8 +257,8 @@
 <!-- SCRIPTS -->
 <!-- <script src="js/main_menu_scroll.js"></script> -->
 <!--<script src="js/main_page.js"></script>-->
-<script src="js/blocks/block.js"></script>
-<script src="js/openFunctions.js"></script>
+<script src="js/blocks/block/block.js"></script>
+<!--<script src="js/openFunctions.js"></script>-->
 <script src="js/modules/http.js"></script>
 <script src="js/main.js"></script>
 
