--- a/frontend/my project/index_objects.html
+++ b/frontend/my project/index_objects.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
 
 
-    <link rel="stylesheet" href="js/blocks/players_rating/players_rating.css">
+    <link rel="stylesheet" href="js/blocks/scoreboard/index.css">
     <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
 
 </head>
@@ -80,8 +80,7 @@
         </header>
 
         <div id="app">
-
-
+            <h2 class="heading">fdjngjornkm</h2>
         </div>
         <!-- MAIN PART -->
         <section id="main_page">
@@ -261,6 +260,7 @@
 <!-- <script src="js/main_menu_scroll.js"></script> -->
 <!--<script src="js/main_page.js"></script>-->
 <script src="js/blocks/block/block.js"></script>
+<script src="js/blocks/scoreboard/scoreboard.pug.js"></script>
 <script src="js/blocks/scoreboard/index.js"></script>
 <!--<script src="js/openFunctions.js"></script>-->
 <script src="js/modules/http.js"></script>
