get data working

--- a/frontend/my project/index_objects.html
+++ b/frontend/my project/index_objects.html
@@ -259,6 +259,7 @@
 <!-- SCRIPTS -->
 <!-- <script src="js/main_menu_scroll.js"></script> -->
 <!--<script src="js/main_page.js"></script>-->
+<script src="js/models/user.js"></script>
 <script src="js/blocks/block/block.js"></script>
 <script src="js/blocks/form/form.js"></script>
 <script src="js/blocks/scoreboard/scoreboard.pug.js"></script>
