get data working

--- a/frontend/my project/index_objects.html
+++ b/frontend/my project/index_objects.html
@@ -28,7 +28,7 @@
 
 
         <!-- Nav -->
-        <header>
+        <header id="header">
             <!-- icon for menu show for monile -->
             <div id="menuShow">
                 <i class="fa fa-bars" aria-hidden="true"></i>
@@ -58,6 +58,9 @@
                         Registration
                     </div>
                 </a>
+            </div>
+            <div id="profile-nav">
+                <h2>PROFILE</h2>
             </div>
             <div id="clear-navigation"></div>
             <!-- Mobile menu -->
@@ -267,6 +270,7 @@
 <!--<script src="js/openFunctions.js"></script>-->
 <script src="js/modules/http.js"></script>
 <script src="js/services/user-service.js"></script>
+<script src="js/blocks/navbar/navbar.js"></script>
 <script src="js/main.js"></script>
 
 <!-- jQuery -->
