add nav bar with logout

--- a/frontend/my project/index_objects.html
+++ b/frontend/my project/index_objects.html
@@ -60,7 +60,10 @@
                 </a>
             </div>
             <div id="profile-nav">
-                <h2>PROFILE</h2>
+                <select>
+                    <option value="profile">Profile</option>
+                    <option value="logout">Logout</option>
+                </select>
             </div>
             <div id="clear-navigation"></div>
             <!-- Mobile menu -->
@@ -209,6 +212,7 @@
                     </div>
                 </div>
             </div>
+        </section>
     </div>
 
         <!--PLAYERS RATING-->
