not done profile

--- a/frontend/my project/index_objects.html
+++ b/frontend/my project/index_objects.html
@@ -10,12 +10,13 @@
     <link rel="stylesheet" href="css/header_footer.css" />
     <link rel="stylesheet" href="css/main_page.css" />
     <link rel="stylesheet" href="css/form.css" />
-    <link rel="stylesheet" href="css/player_profile.css" />
+    <!--<link rel="stylesheet" href="css/player_profile.css" />-->
     <link rel="stylesheet" href="css/players_rating.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css">
 
 
     <link rel="stylesheet" href="js/blocks/scoreboard/index.css">
+    <link rel="stylesheet" href="js/blocks/profile/index.css">
     <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
 
 </head>
@@ -269,6 +270,8 @@
 <script src="js/models/user.js"></script>
 <script src="js/blocks/block/block.js"></script>
 <script src="js/blocks/form/form.js"></script>
+<script src="js/blocks/profile/profile.pug.js"></script>
+<script src="js/blocks/profile/index.js"></script>
 <script src="js/blocks/scoreboard/scoreboard.pug.js"></script>
 <script src="js/blocks/scoreboard/index.js"></script>
 <!--<script src="js/openFunctions.js"></script>-->
