--- a/frontend/my project/index_objects.html
+++ b/frontend/my project/index_objects.html
@@ -38,7 +38,7 @@
             <div id="logo">
                 <a href="" title="on-main">
                     <img border="0" alt="W3Schools" src="images/logo.png" width="70" height="70">
-                    <span>CsGoForum</span>
+                    <span class="title">CsGoForum</span>
                 </a>
             </div>
             <div id="navigation">
@@ -239,10 +239,10 @@
 <!--FOOTER-->
 
 <footer>
-    <div id="site-name">
+    <div id="site-name" class="heading">
         <span>CsGoForum</span>
     </div>
-    <div id="clear"></div>
+    <div class="clear"></div>
 
     <div id="footer-menu">
         <a href="" title="">something</a>
