logged in nav bar

--- a/frontend/my project/index_objects.html
+++ b/frontend/my project/index_objects.html
@@ -60,11 +60,12 @@
                     </div>
                 </a>
             </div>
-            <div id="profile-nav">
-                <select>
-                    <option value="profile">Profile</option>
-                    <option value="logout">Logout</option>
-                </select>
+            <div class="dropdown" id="profile-nav">
+                <button class="drop-btn">Nickname</button>
+                <div class="dropdown-content">
+                    <a href="#">Profile</a>
+                    <a href="#">Logout</a>
+                </div>
             </div>
             <div id="clear-navigation"></div>
             <!-- Mobile menu -->
