--- a/frontend/my project/index_objects.html
+++ b/frontend/my project/index_objects.html
@@ -10,19 +10,18 @@
     <link rel="stylesheet" href="css/header_footer.css" />
     <link rel="stylesheet" href="css/main_page.css" />
     <link rel="stylesheet" href="css/form.css" />
-    <!--<link rel="stylesheet" href="css/player_profile.css" />-->
+    <link rel="stylesheet" href="css/player_profile.css" />
     <link rel="stylesheet" href="css/players_rating.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css">
 
 
     <link rel="stylesheet" href="js/blocks/scoreboard/index.css">
-    <link rel="stylesheet" href="js/blocks/profile/index.css">
+    <!--<link rel="stylesheet" href="js/blocks/profile/index.css">-->
     <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
 
 </head>
 <body>
-<div class="background">
-</div>
+<div class="background"></div>
 
 <div id="wrapper">
     <div id="content">
@@ -63,8 +62,8 @@
             <div class="dropdown" id="profile-nav">
                 <button class="drop-btn">Nickname</button>
                 <div class="dropdown-content">
-                    <a href="#">Profile</a>
-                    <a href="#">Logout</a>
+                    <a id='profile-btn' href="#">Profile</a>
+                    <a id='logout-btn' href="#">Logout</a>
                 </div>
             </div>
             <div id="clear-navigation"></div>
@@ -88,7 +87,8 @@
         </header>
 
         <div id="app">
-            <h2 class="heading">fdjngjornkm</h2>
+            <h2 class="heading"></h2>
+
         </div>
         <!-- MAIN PART -->
         <section id="main_page">
@@ -179,88 +179,83 @@
         <!--PLAYER PROFILE-->
         <section id="player-profile">
             <div id="profile-left">
-                <div id="left-part">
-                    <h2 class="heading">
-                        Profile:
-                    </h2>
-                    <!-- отступ от заголовка -->
-                    <div style="clear: both"><br></div>
+                <h2 class="heading">
+                    Profile:
+                </h2>
+                <!-- отступ от заголовка -->
+                <div style="clear: both"><br></div>
 
-                    <div class="avatar">
-                        <img src="images/pic01.jpg" alt="News1" title="News1">
-                    </div>
-
+                <div class="avatar">
+                    <img src="images/pic01.jpg" alt="News1" title="News1">
                 </div>
+
             </div>
 
             <div id="profile-right">
-                <div id="person-info">
-                    <h2 class="heading">General information:</h2>
-                    <!-- отступ от заголовка -->
-                    <div style="clear: both"><br></div>
-                    <div id="info-name" class="info">
-                        <p>Nickname:</p>
-                        <p>First name:</p>
-                        <p>Surname:</p>
-                        <p>Email:</p>
-                        <p>Password:</p>
-                    </div>
-                    <div id="info-value" class="info">
-                        <p>nickname</p>
-                        <p>name</p>
-                        <p>surname</p>
-                        <p>email</p>
-                        <p>pass</p>
-                    </div>
+                <h2 class="heading">General information:</h2>
+                <!-- отступ от заголовка -->
+                <div style="clear: both"><br></div>
+                <div id="info-name" class="info">
+                    <p>Nickname:</p>
+                    <p>First name:</p>
+                    <p>Surname:</p>
+                    <p>Email:</p>
+                    <p>Password:</p>
+                </div>
+                <div id="info-value" class="info">
+                    <p>nickname</p>
+                    <p>name</p>
+                    <p>surname</p>
+                    <p>email</p>
+                    <p>pass</p>
                 </div>
             </div>
         </section>
-    </div>
 
         <!--PLAYERS RATING-->
         <section id="players-rating">
             <h2 class="heading">Best players: </h2>
             <!-- отступ от заголовка -->
             <div style="clear: both"><br></div>
-            <div id="player-position" class="player-info player-info-column-name">Position</div>
-            <div id="player-nickname" class="player-info player-info-column-name">Nickname</div>
-            <div id="player-rating" class="player-info player-info-column-name">Rating</div>
-            <div id="player-team" class="player-info player-info-column-name">Team</div>
-
+            <div class="section-paragraph">
+                <p id="player-position" class="player-info player-info-column-name"><span>Position</span></p>
+                <p id="player-nickname" class="player-info player-info-column-name"><span>Position</span></p>
+                <p id="player-rating" class="player-info player-info-column-name"><span>Position</span></p>
+                <p id="player-team" class="player-info player-info-column-name"><span>Position</span></p>
+            </div>
             <div style="clear: both"><br></div>
-            <div class="player-info">1</div>
-            <div class="player-info">induk</div>
-            <div class="player-info">100500</div>
-            <div class="player-info">indku-team</div>
+            <div class="section-paragraph">
+                <p class="player-info">1</p>
+                <p class="player-info">induk</p>
+                <p class="player-info">100500</p>
+                <p class="player-info">indku-team</p>
+            </div>
         </section>
 
-
-</div>
-
-<!--FOOTER-->
-
-<footer>
-    <div id="site-name" class="heading">
-        <span>CsGoForum</span>
     </div>
-    <div class="clear"></div>
 
-    <div id="footer-menu">
-        <a href="" title="">something</a>
-        <a href="" title="">Support us</a>
-        <a href="" title="">About us</a>
-    </div>
-    <div id="rights">
-        <a href="">All rights reserved &copy; 2018</a>
-    </div>
-    <div id="social">
-        <a href="" title="vk"><i class="fa fa-vk" aria-hidden="true"></i></a>
-        <a href="" title="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></i></a>
-        <a href="" title="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></i></a>
-    </div>
-</footer>
+    <!--FOOTER-->
+    <footer>
+        <div id="site-name" class="heading">
+            <span>CsGoForum</span>
+        </div>
+        <div class="clear"></div>
 
-</div>
+        <div id="footer-menu">
+            <a href="" title="">something</a>
+            <a href="" title="">Support us</a>
+            <a href="" title="">About us</a>
+        </div>
+        <div id="rights">
+            <a href="">All rights reserved &copy; 2018</a>
+        </div>
+        <div id="social">
+            <a href="" title="vk"><i class="fa fa-vk" aria-hidden="true"></i></a>
+            <a href="" title="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></i></a>
+            <a href="" title="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></i></a>
+        </div>
+    </footer>
+
 </div>
 
 
@@ -271,7 +266,7 @@
 <script src="js/models/user.js"></script>
 <script src="js/blocks/block/block.js"></script>
 <script src="js/blocks/form/form.js"></script>
-<script src="js/blocks/profile/profile.pug.js"></script>
+<!--<script src="js/blocks/profile/profile.pug.js"></script>-->
 <script src="js/blocks/profile/index.js"></script>
 <script src="js/blocks/scoreboard/scoreboard.pug.js"></script>
 <script src="js/blocks/scoreboard/index.js"></script>
